--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.1",
+    "@types/react": "19.0.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.4"
   }
